[package]
name = "lol_api_request"
version = "0.1.0"
authors = ["Raiigo <nolann.juet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
surf = "2.2.0"
async-std = {version = "1.9.0", features = ["attributes"]}
reqwest = { version = "0.11.3", features = ["json", "blocking"] }